Cambiar repositorios a Array